fix/home/align/columns/

--- a/assets/css/3-layouts/home.sass
+++ b/assets/css/3-layouts/home.sass
@@ -42,10 +42,10 @@ body
     align-items: center
 
   #my_screen
-    margin-left: 8%
+    margin-left: 0%
 
   #toggle
-    margin-left: 8%
+    margin-left: 0%
 
   img
     padding-left: 8%
@@ -143,10 +143,10 @@ h1
       justify-content: center
 
   #my_screen
-    margin-left: 8%
+    // margin-left: 8%
 
   #toggle
-    margin-left: 8%
+    // margin-left: 8%
 
 @media(max-width: 415px)
   .home-sections
@@ -154,7 +154,7 @@ h1
       margin-left: 0%
 
   #my_screen
-    margin-left: 8%
+    // margin-left: 8%
 
 #gators
   width: 300px
